--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,21 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
 }
 
 dependencies {
@@ -25,6 +34,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.android.gms:play-services-ads:19.4.0'
+
+
     implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
+    //implementation 'com.google.android.exoplayer:exoplayer-ui:2.12.1'
+    // The library adds the IMA ExoPlayer integration for ads.
+    // implementation 'com.google.android.exoplayer:extension-ima:2.12.1'
+
+    implementation 'com.google.android.exoplayer:extension-ima:r2.5.1'
+
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 }
